feat: add hierarchical asset categories and dashboard grouping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "numpy>=2.0,<3.0",
     "pandas>=2.2,<3.0",
     "python-dotenv>=1.0,<2.0",
+    "yfinance>=0.2.66",
 ]
 
 [project.optional-dependencies]
