--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ ignore_missing_imports = true
 warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
+exclude = ["portfolio/migrations/"]
 
 [tool.django-stubs]
 django_settings_module = "config.settings"
