--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ django_settings_module = "config.settings"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[dependency-groups]
+dev = [
+    "playwright>=1.56.0",
+    "pytest-django>=4.11.1",
+    "pytest-playwright>=0.7.2",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["portfolio", "config"]
 
