--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 dependencies = [
     "django>=5.1,<5.2",
+    "pandas>=2.3.3",
     "python-dotenv>=1.0,<2.0",
     "yfinance>=0.2.66",
 ]
