--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Tax-optimized portfolio management platform"
 readme = "README.md"
 requires-python = ">=3.12"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "Charles Beck III", email = "charlesbeck@gmail.com" }
 ]
 dependencies = [
     "django>=5.1,<5.2",
