Test suite cleanup and improvement: - Removed deprecated test files. - Created centralized constants and shared fixtures for E2E tests. - Refactored E2E tests to use shared authenticated page and portfolio fixtures. - Added shared mock utilities for market data. - Implemented edge case test suite (empty portfolios, precision, large values). - Updated pytest.ini with markers and performance options. - Fixed numerous typing and linting issues in test modules.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,14 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = --reuse-db
+addopts = 
+    --reuse-db
+    --maxfail=5
+    --tb=short
+    -ra
+
+markers =
+    unit: Unit tests (no database)
+    integration: Integration tests (database required)
+    e2e: End-to-end tests (browser required)
+    slow: Slow tests (>1 second)
