--- a/pytest.ini
+++ b/pytest.ini
@@ -8,7 +8,20 @@ addopts =
     -ra
 
 markers =
+    # Test categories by database/browser requirements
     unit: Unit tests (no database)
     integration: Integration tests (database required)
     e2e: End-to-end tests (browser required)
     slow: Slow tests (>1 second)
+    
+    # Domain-specific markers
+    calculations: Tests for allocation/calculation engine logic
+    domain: Tests for domain models and business rules
+    views: Tests for Django views and templates
+    golden: Golden reference tests with known expected values
+    models: Tests for Django model layer
+    services: Tests for service layer
+    
+    # Special categories
+    edge_cases: Edge case and boundary condition tests
+    performance: Performance and benchmark tests
