--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dev = [
     "django-stubs>=5.1",
     "pre-commit>=4.0",
     "coverage>=7.0",
+    "detect-secrets>=1.4.0",
 ]
 
 [tool.hatch.build.targets.wheel]
