feat: comprehensive cleanup - settings split, CSS extraction, template tags, test standardization
- Split Django settings into environment-specific modules (base, development, testing, production)
- Extracted all inline CSS to static/css/portfolio.css with proper organization
- Created allocation_tags.py with template filters for row styling and formatting
- Simplified AllocationPresentationFormatter by removing CSS logic
- Renamed seed_users to seed_dev_data with --skip-admin flag
- Migrated benchmark tests to pytest fixtures (large_portfolio_benchmark, medium_portfolio_benchmark)
- Configured pytest markers (unit, integration, e2e, performance, golden)
- Updated pre-commit hooks to run unit tests on commit, integration on push
- Standardized test asset class names to use 'US Equities' instead of 'US Stocks'
- Fixed debug toolbar URL configuration
- Updated README.md with new commands and testing documentation
- Configured mypy to exclude test files and management commands from type checking

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
         entry: uv run mypy
         language: system
         types: [python]
+        exclude: ^portfolio/(tests|management/commands)/
         require_serial: true
 
       - id: django-check
@@ -48,6 +49,14 @@ repos:
       - id: pytest-fast
         name: Fast Unit Tests
         entry: uv run pytest -m unit
+        language: system
+        types: [python]
+        pass_filenames: false
+        # Run on commit by default (fast)
+
+      - id: pytest-integration
+        name: Integration Tests
+        entry: uv run pytest -m integration
         language: system
         types: [python]
         pass_filenames: false
