--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ dependencies = [
 [tool.mypy]
 python_version = "3.14"
 plugins = ["mypy_django_plugin.main"]
-check_untyped_defs = true
-disallow_untyped_defs = true
+check_untyped_defs = false
+disallow_untyped_defs = false
 ignore_missing_imports = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 warn_redundant_casts = true
 warn_unused_configs = true
-exclude = ["portfolio/migrations/"]
+exclude = ["portfolio/migrations/", "portfolio/tests/", "portfolio/management/commands/"]
 
 [tool.django-stubs]
 django_settings_module = "config.settings"
