--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.settings
+DJANGO_SETTINGS_MODULE = config.settings.testing
 python_files = tests.py test_*.py *_tests.py
 addopts =
     --reuse-db
