--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,11 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 "*/settings.py" = ["F405"]
 # Admin files can have long lines for list_display
 "*/admin.py" = ["E501"]
+# Ignore Bandit alerts in tests (asserts, hardcoded passwords, pseudo-randomness)
+"tests/*" = ["S101", "S105", "S106", "S311", "PLR2004"]
+"**/tests/*" = ["S101", "S105", "S106", "S311", "PLR2004"]
+"**test_*.py" = ["S101", "S105", "S106", "S311", "PLR2004"]
+"**/conftest.py" = ["S101", "S105", "S106", "S311", "PLR2004"]
 
 [tool.ruff.lint.isort]
 # Django-specific isort configuration
