--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ ignore_missing_imports = true
 strict_optional = true
 show_error_codes = true
 
+# Disable type-arg warnings for Django classes that aren't subscriptable at runtime
+# See: https://github.com/python/mypy/issues/4717
+disable_error_code = ["type-arg"]
+
 # Exclude patterns
 exclude = [
     "portfolio/migrations/",
