Refactor logging configuration to remove circular dependencies
- Create config/logging.py with configure_structlog and get_logging_config
- Update settings files (base, dev, prod) to use new logging module
- Remove legacy config/logging_config.py
- Update pyproject.toml to use testing settings for pytest
- Update README.md logging documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -197,7 +197,7 @@ line-ending = "auto"
 settings-module = "config.settings"
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "config.settings.base"
+DJANGO_SETTINGS_MODULE = "config.settings.testing"
 python_files = ["test_*.py", "*_test.py"]
 testpaths = ["portfolio/tests"]
 addopts = "--cov=portfolio --cov-report=term-missing --cov-report=html:coverage_html"
