Implement Phase 0: Django 6 best practices, security, and ASGI configuration

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 DEFAULT_FROM_EMAIL=noreply@cb3portfolio.com
 SERVER_EMAIL=server@cb3portfolio.com
+ADMIN_EMAIL=admin@cb3portfolio.com
