--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "structlog>=25.5.0",              # Structured logging - update as needed
     "whitenoise[brotli]>=6.11.0",    # Static files - update with Django
     "yfinance>=0.2.66",               # Market data - update monthly
+    "psycopg[binary]>=3.2.0",         # PostgreSQL adapter (v3 for async support)
 ]
 
 [tool.mypy]
