refactor(tests): complete test suite restructuring to 1:1 mapping
- Achieve 1:1 mapping between production code and test files
- Migrate all tests from Django TestCase to pytest-native
- Remove PortfolioTestMixin and all legacy test infrastructure
- Consolidate fixtures in conftest.py and module-specific files
- Add comprehensive test stubs for all production modules
- Fix golden reference and target allocation test issues
- Update documentation (README.md, tests/__init__.py)

Test Results: 169 passed, 4 skipped (stubs), 0 warnings

BREAKING CHANGE: Removes PortfolioTestMixin

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,6 +21,10 @@ markers =
     golden: Golden reference tests with known expected values
     models: Tests for Django model layer
     services: Tests for service layer
+    forms: Tests for Django forms
+    templatetags: Tests for template tags and filters
+    presentation: Tests for presentation/formatting layer
+    middleware: Tests for Django middleware
 
     # Special categories
     edge_cases: Edge case and boundary condition tests
