--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ exclude = [
     "portfolio/migrations/",
     "portfolio/tests/",
     "portfolio/management/commands/",
+    "scripts/",
     "conftest.py",
 ]
 
@@ -101,6 +102,8 @@ dev = [
     "coverage>=7.0",                 # Test coverage - update as needed
     "detect-secrets>=1.4.0",         # Secret scanning - update quarterly
     "safety>=3.7.0",                 # Security scanning - update monthly
+    "factory-boy>=3.3.3",
+    "types-pytz>=2025.2.0.20251108",
 ]
 
 [tool.hatch.build.targets.wheel]
