Add is_primary field to Security model and update dependencies
- Add is_primary field to Security model for primary security selection
- Update allocation calculations to handle zero holdings
- Update holdings template for improved display
- Update project dependencies (pyproject.toml, uv.lock)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "whitenoise[brotli]>=6.11.0",    # Static files - update with Django
     "yfinance>=0.2.66",               # Market data - update monthly
     "psycopg[binary]>=3.2.0",         # PostgreSQL adapter (v3 for async support)
+    "cvxpy>=1.6.0",                   # Portfolio optimization - update as needed
 ]
 
 [tool.mypy]
