Add pytest-xdist for parallel test execution
Install and configure pytest-xdist to enable parallel test execution,
reducing test runtime by ~35% (8s → 5.3s for 333 tests on 10-core machine).

Changes:
- Add pytest-xdist dependency to pyproject.toml
- Configure pytest with -n auto --dist loadscope in pyproject.toml
- Add pytest_configure() hook in conftest.py for xdist awareness
- Update pre-commit hooks to use parallel execution (-n auto)
- Document xdist usage and debugging in README.md

Performance results:
- Baseline (serial, -n 0): 8.0 seconds
- Parallel (auto, 10 cores): 5.3 seconds
- Speedup: 35% faster

All 333 tests pass consistently in both serial and parallel modes.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,16 +50,16 @@ repos:
         pass_filenames: false
 
       - id: pytest-fast
-        name: Fast Unit Tests
-        entry: uv run pytest -m unit
+        name: Fast Unit Tests (Parallel)
+        entry: uv run pytest -m unit -n auto --dist loadscope -q
         language: system
         types: [python]
         pass_filenames: false
-        # Run on commit by default (fast)
+        # Run on commit by default (fast with parallel execution)
 
       - id: pytest-integration
-        name: Integration Tests
-        entry: uv run pytest -m integration
+        name: Integration Tests (Parallel)
+        entry: uv run pytest -m integration -n auto --dist loadscope -q
         language: system
         types: [python]
         pass_filenames: false
