--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,15 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings.testing
 python_files = tests.py test_*.py *_tests.py
+
+# Note: Parallel execution (-n auto) configured in pyproject.toml
+# To disable xdist temporarily: pytest -n 0
 addopts =
     --reuse-db
     --maxfail=5
     --tb=short
     -ra
+    --strict-markers
 
 markers =
     # Test categories by database/browser requirements
